Add new files incl. table.html

--- a/src/styleguide.html
+++ b/src/styleguide.html
@@ -63,7 +63,7 @@
 
   <!-- Headers -->
   <hr>
-  <h1 class="section-info-header">Section info header</h1>
+  <h2 class="board-info-header">Board header</h2>
   <h2 class="chart-header">Chart header for "Earnings chart"</h2>
 
   <!-- Buttons -->
@@ -102,36 +102,38 @@
   <!-- Gotowy element - Meter section -->
   <hr>
   <p>gotowy element</p>
-  <div class="row">
-    <div class="col-offset-lg-3 col-lg-3 col-md-12 col-sm-12">
-      <div class="meters-container-new">
-        <div class="meter-wrapper">
-          <span class="meter-label">Visit Signups</span>
-          <span class="meter-value">124</span>
+  <div class="container">
+    <div class="row">
+      <div class="col-offset-lg-3 col-lg-3 col-md-12 col-sm-12">
+        <div class="meters-container-new">
+          <div class="meter-wrapper">
+            <span class="meter-label">Visit Signups</span>
+            <span class="meter-value">124</span>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col-lg-3 col-md-12 col-sm-12">
-      <div class="meters-container-new">
-        <div class="meter-wrapper">
-          <span class="meter-label">Net Deposit</span>
-          <span class="meter-value">564</span>
+      <div class="col-lg-3 col-md-12 col-sm-12">
+        <div class="meters-container-new">
+          <div class="meter-wrapper">
+            <span class="meter-label">Net Deposit</span>
+            <span class="meter-value">564</span>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col-offset-lg-3 col-lg-3 col-md-12 col-sm-12">
-      <div class="meters-container-new">
-        <div class="meter-wrapper">
-          <span class="meter-label">FTD</span>
-          <span class="meter-value">445</span>
+      <div class="col-offset-lg-3 col-lg-3 col-md-12 col-sm-12">
+        <div class="meters-container-new">
+          <div class="meter-wrapper">
+            <span class="meter-label">FTD</span>
+            <span class="meter-value">445</span>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col-lg-3 col-md-12 col-sm-12">
-      <div class="meters-container-new">
-        <div class="meter-wrapper">
-          <span class="meter-label">Turnover</span>
-          <span class="meter-value">432</span>
+      <div class="col-lg-3 col-md-12 col-sm-12">
+        <div class="meters-container-new">
+          <div class="meter-wrapper">
+            <span class="meter-label">Turnover</span>
+            <span class="meter-value">432</span>
+          </div>
         </div>
       </div>
     </div>
@@ -141,7 +143,7 @@
   <!-- Graph -->
   <hr>
   <p>Grafika - wykres </p>
-  <div class="container">
+  <div class="container-800">
     <div class="chart">
       <h2 class="chart-header">Earnings chart</h2>
       <div class="scroll-wrapper">
@@ -150,8 +152,26 @@
     </div>
   </div>
 
+  <!-- Links section -->
+  <hr>
+  <p>LINKI</p>
 
 
+  <table id="links-table" class="u-mt-2 u-mb-2">
+      <tbody>
+        <tr>
+          <td><h2 class="section-header">Home page</h2>
+          </td>
+          <td><a class="large" href="http://www.homepage.com" target="_blank">http://www.homepage.com</a>
+          </td>
+          <td>
+            <a href="#!" class="table-action-link"><i class="icon-links"></i></a>
+            <a href="#!" class="table-action-link delete"><i class="icon-trash"></i></a>
+          </td>
+        </tr>
+      </tbody> 
+    </table>
+ 
 
 
 
