Chcganes to files

--- a/src/pages/board-links.html
+++ b/src/pages/board-links.html
@@ -11,8 +11,9 @@
 </head>
 
 <body>
-  <div class="board-container">  <!-- board-container starts -->
-    
+  
+  <!-- board-container starts -->
+  <div class="board-container">
     <div class="board-header">
       <h1 class="board-info-header">LINKS</h1>
     </div>
@@ -71,124 +72,125 @@
               </td>
             </tr>
             <tr>
-                <td>
-                  <h2 class="link-header">Yoursite</h2>
-                </td>
-                <td>
-                  <a class="large" href="http://www.yoursite.com" target="_blank">http://www.yoursite.com</a>
-                </td>
-                <td class="td-action-link">
-                  <a href="#!" class="table-action-link">
-                    <i class="icon-links"></i>
-                  </a>
-                  <a href="#!" class="table-action-link delete">
-                    <i class="icon-trash"></i>
-                  </a>
-                </td>
-              </tr>
-              <tr>
-                  <td>
-                    <h2 class="link-header">Google</h2>
-                  </td>
-                  <td>
-                    <a class="large" href="http://www.google.com" target="_blank">http://www.google.com</a>
-                  </td>
-                  <td class="td-action-link">
-                    <a href="#!" class="table-action-link">
-                      <i class="icon-links"></i>
-                    </a>
-                    <a href="#!" class="table-action-link delete">
-                      <i class="icon-trash"></i>
-                    </a>
-                  </td>
-                </tr>
-                <tr>
-                    <td>
-                      <h2 class="link-header">Facebook</h2>
-                    </td>
-                    <td>
-                      <a class="large" href="http://www.facebook.com" target="_blank">http://www.facebook.com</a>
-                    </td>
-                    <td class="td-action-link">
-                      <a href="#!" class="table-action-link">
-                        <i class="icon-links"></i>
-                      </a>
-                      <a href="#!" class="table-action-link delete">
-                        <i class="icon-trash"></i>
-                      </a>
-                    </td>
-                  </tr>
-                  <tr>
-                      <td>
-                        <h2 class="link-header">Dashboard</h2>
-                      </td>
-                      <td>
-                        <a class="large" href="http://www.dashboard.com" target="_blank">http://www.dashboard.com</a>
-                      </td>
-                      <td class="td-action-link">
-                        <a href="#!" class="table-action-link">
-                          <i class="icon-links"></i>
-                        </a>
-                        <a href="#!" class="table-action-link delete">
-                          <i class="icon-trash"></i>
-                        </a>
-                      </td>
-                    </tr>
-                    <tr>
-                        <td>
-                          <h2 class="link-header">Blurax</h2>
-                        </td>
-                        <td>
-                          <a class="large" href="http://www.blurax.com" target="_blank">http://www.blurax.com</a>
-                        </td>
-                        <td class="td-action-link">
-                          <a href="#!" class="table-action-link">
-                            <i class="icon-links"></i>
-                          </a>
-                          <a href="#!" class="table-action-link delete">
-                            <i class="icon-trash"></i>
-                          </a>
-                        </td>
-                      </tr>
-                      <tr>
-                          <td>
-                            <h2 class="link-header">Piece of Wine</h2>
-                          </td>
-                          <td>
-                            <a class="large" href="http://www.pieceofwine.com" target="_blank">http://www.pieceofwine.com</a>
-                          </td>
-                          <td class="td-action-link">
-                            <a href="#!" class="table-action-link">
-                              <i class="icon-links"></i>
-                            </a>
-                            <a href="#!" class="table-action-link delete">
-                              <i class="icon-trash"></i>
-                            </a>
-                          </td>
-                        </tr>
-                        <tr>
-                            <td>
-                              <h2 class="link-header">Twitter</h2>
-                            </td>
-                            <td>
-                              <a class="large" href="http://www.twitter.com" target="_blank">http://www.twitter.com</a>
-                            </td>
-                            <td class="td-action-link">
-                              <a href="#!" class="table-action-link">
-                                <i class="icon-links"></i>
-                              </a>
-                              <a href="#!" class="table-action-link delete">
-                                <i class="icon-trash"></i>
-                              </a>
-                            </td>
-                          </tr>
+              <td>
+                <h2 class="link-header">Yoursite</h2>
+              </td>
+              <td>
+                <a class="large" href="http://www.yoursite.com" target="_blank">http://www.yoursite.com</a>
+              </td>
+              <td class="td-action-link">
+                <a href="#!" class="table-action-link">
+                  <i class="icon-links"></i>
+                </a>
+                <a href="#!" class="table-action-link delete">
+                  <i class="icon-trash"></i>
+                </a>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h2 class="link-header">Google</h2>
+              </td>
+              <td>
+                <a class="large" href="http://www.google.com" target="_blank">http://www.google.com</a>
+              </td>
+              <td class="td-action-link">
+                <a href="#!" class="table-action-link">
+                  <i class="icon-links"></i>
+                </a>
+                <a href="#!" class="table-action-link delete">
+                  <i class="icon-trash"></i>
+                </a>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h2 class="link-header">Facebook</h2>
+              </td>
+              <td>
+                <a class="large" href="http://www.facebook.com" target="_blank">http://www.facebook.com</a>
+              </td>
+              <td class="td-action-link">
+                <a href="#!" class="table-action-link">
+                  <i class="icon-links"></i>
+                </a>
+                <a href="#!" class="table-action-link delete">
+                  <i class="icon-trash"></i>
+                </a>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h2 class="link-header">Dashboard</h2>
+              </td>
+              <td>
+                <a class="large" href="http://www.dashboard.com" target="_blank">http://www.dashboard.com</a>
+              </td>
+              <td class="td-action-link">
+                <a href="#!" class="table-action-link">
+                  <i class="icon-links"></i>
+                </a>
+                <a href="#!" class="table-action-link delete">
+                  <i class="icon-trash"></i>
+                </a>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h2 class="link-header">Blurax</h2>
+              </td>
+              <td>
+                <a class="large" href="http://www.blurax.com" target="_blank">http://www.blurax.com</a>
+              </td>
+              <td class="td-action-link">
+                <a href="#!" class="table-action-link">
+                  <i class="icon-links"></i>
+                </a>
+                <a href="#!" class="table-action-link delete">
+                  <i class="icon-trash"></i>
+                </a>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h2 class="link-header">Piece of Wine</h2>
+              </td>
+              <td>
+                <a class="large" href="http://www.pieceofwine.com" target="_blank">http://www.pieceofwine.com</a>
+              </td>
+              <td class="td-action-link">
+                <a href="#!" class="table-action-link">
+                  <i class="icon-links"></i>
+                </a>
+                <a href="#!" class="table-action-link delete">
+                  <i class="icon-trash"></i>
+                </a>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <h2 class="link-header">Twitter</h2>
+              </td>
+              <td>
+                <a class="large" href="http://www.twitter.com" target="_blank">http://www.twitter.com</a>
+              </td>
+              <td class="td-action-link">
+                <a href="#!" class="table-action-link">
+                  <i class="icon-links"></i>
+                </a>
+                <a href="#!" class="table-action-link delete">
+                  <i class="icon-trash"></i>
+                </a>
+              </td>
+            </tr>
           </tbody>
         </table>
         <button class="btn orange add">+ add new
         </button>
       </div>
     </div>
-  </div> <!-- board-container ends -->
+  </div>
+  <!-- board-container ends -->
 
 
 </body>
